force-app/main/default/objects/Guest_Booking__c/Guest_Booking__c.object-meta.xml
<CustomObject>
    <description>Programs Object. Used for tracking guests who attend family retreats.  See property__C.</description>
    <label>Guest Booking</label>
    <nameField>
        <displayFormat>GB-{0000}</displayFormat>
        <label>Guest Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>