force-app/main/default/objects/Guest_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guest Bookings</relationshipLabel>
    <relationshipName>Guest_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>