force-app/main/default/objects/Guest_Booking__c/fields/Guest_Age__c.field-meta.xml
<CustomField>
    <fullName>Guest_Age__c</fullName>
    <formula>TEXT(Contact__r.Age__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Age</label>
    <type>Text</type>
</CustomField>