force-app/main/default/objects/Guest_Booking__c/fields/Guest_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Guest_Birthdate__c</fullName>
    <label>Guest Birthdate</label>
    <type>Date</type>
</CustomField>