force-app/main/default/objects/Guest_Booking__c/fields/Guest_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Guest_Relationship__c</fullName>
    <label>Guest Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>