force-app/main/default/objects/Guest_Booking__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Guest Bookings</relationshipLabel>
    <relationshipName>Guest_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>