force-app/main/default/objects/Guest_Booking__c/fields/Retreat_Booking__c.field-meta.xml
<CustomField>
    <fullName>Retreat_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retreat Booking</label>
    <referenceTo>Retreat_Booking__c</referenceTo>
    <relationshipLabel>Guest Bookings</relationshipLabel>
    <relationshipName>Guest_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>